kubernetes-exercises/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-mysql-app
  labels:
    app: java-mysql-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-mysql-app
  template:
    metadata:
      labels:
        app: java-mysql-app
    spec:
      imagePullSecrets:
      - name: my-registry-key
      containers:
      - name: java-mysql-app
        image: lihanda/demo-app:java-app-1.0
        imagePullPolicy: Always

        ports:
        - containerPort: 8080
